update layout all page

--- a/.env.production
+++ b/.env.production
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=developer
-DB_PASSWORD=password
+DB_DATABASE=chiwamit_joyofminds
+DB_USERNAME=chiwamit_rootjoyofminds
+DB_PASSWORD=Admin@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
